--- a/map.html
+++ b/map.html
@@ -9,6 +9,12 @@
 		integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
 	<!-- <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.css" /> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css"
+		integrity="sha512-P9vJUXK+LyvAzj8otTOKzdfF1F3UYVl13+F8Fof8/2QNb8Twd6Vb+VD52I7+87tex9UXxnzPgWA3rH96RExA7A=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<style>
 		html,
@@ -31,6 +37,9 @@
 	<script src="https://unpkg.com/leaflet-providers@1.12.0/leaflet-providers.js"></script>
 	<script src="https://unpkg.com/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
 	<!-- <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.js"></script> -->
+	<!-- Search JavaScript Library -->
+	<script src="https://calvinmetcalf.github.io/leaflet-ajax/dist/leaflet.ajax.js"></script>
+	<script src="https://calvinmetcalf.github.io/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
 
 	<script>
 		// yogyakarta
@@ -87,7 +96,7 @@
 						"<p>" + feature.properties.alamat + "</p>" +
 						"<p>" + feature.properties.jambuka + "</p>" +
 						"<p>" + feature.properties.jamtutup + "</p>";
-						
+
 
 					layer.bindPopup(popupContent);
 
@@ -110,7 +119,27 @@
 			// 	control.spliceWaypoints(control.getWaypoints().length - 1, 1, destination);
 			// });
 		}
+		//buat style area admin desa dan munculin desanya
+		var areaStyle = {
+			"color": "#008B8B",
+			"weight": 2,
+			"fillOpacity": 0.7,
+			"opacity": 0.45
+		};
 
+
+		var areaAlu = new L.GeoJSON.AJAX(["data/ADMIN.geojson"], {
+			onEachFeature: function (feature, layer) {
+				var popupText = "Kecamatan: " + feature.properties.NAMOBJ;
+				if (feature.properties.WADMKK) {
+					popupText += "<br/>Kabupaten: " + feature.properties.WADMKK;
+				}
+				if (feature.properties.jumlahALL) {
+					popupText += "<a href='halamanalufe.php'><br/>Jumlah Sekolah: 12</a>" //+ feature.properties.jumlahALL;
+				}
+				layer.bindPopup(popupText);
+			}, style: areaStyle
+		}).addTo(map);
 
 
 		loadlayer();
